[gd_scene load_steps=10 format=2]

[ext_resource path="res://NPCs/Soldier.gd" type="Script" id=1]
[ext_resource path="res://NPCs/sword-swipe-Sheet.png" type="Texture" id=2]
[ext_resource path="res://NPCs/roman soldier-Sheet.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=13]
radius = 3.60555

[sub_resource type="Animation" id=4]
resource_name = "walk"
length = 0.6
loop = true
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("SoldierTexture:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 4 ]
}

[sub_resource type="Animation" id=8]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SwordSwipe:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "sword_swing"
length = 0.22
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("SwordSwipe:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.1, 0.14, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.22 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_of_attack"
} ]
}

[sub_resource type="CapsuleShape2D" id=11]
radius = 4.0
height = 4.0

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 6, 10.5 )

[node name="EnemySoldier" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="SoldierTexture" type="Sprite" parent="."]
self_modulate = Color( 0.6, 1, 1, 1 )
position = Vector2( 1, -6 )
texture = ExtResource( 3 )
hframes = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 0.785398
shape = SubResource( 13 )

[node name="WalkAnimation" type="AnimationPlayer" parent="."]
anims/walk = SubResource( 4 )

[node name="SwordSwipe" type="Sprite" parent="."]
visible = false
rotation = -3.14159
texture = ExtResource( 2 )
offset = Vector2( 0, -10 )
hframes = 5

[node name="SwingAnimation" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 8 )
anims/sword_swing = SubResource( 7 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 9, 0 )
shape = SubResource( 11 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0, -0.5 )
shape = SubResource( 12 )

[node name="PushedTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="PushedTimer" to="." method="_on_PushedTimer_timeout"]
